# GimpBTI

./: CMakeLists.txt  readme.md
include/: dialog.hpp
src/: dialog.cpp  plugin-bti.cpp  plugin-tpl.cpp
